--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
+    "rxjs-observable": "0.0.7",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
