--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "rxjs-observable": "0.0.7",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@angular/cli": "~8.3.3",
+    "@angular/compiler-cli": "~8.2.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.3",
-    "@angular/cli": "~8.3.3",
-    "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
