--- a/angular.json
+++ b/angular.json
@@ -65,7 +65,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "newapp:build",
-            "port": 8080
+            "port": 8080,
+            "host": "0.0.0.0"
           },
           "configurations": {
             "production": {
