--- a/package.json
+++ b/package.json
@@ -11,26 +11,28 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.803.3",
     "@angular/animations": "~8.2.4",
+    "@angular/cli": "~8.3.3",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
+    "@angular/compiler-cli": "~8.2.4",
     "@angular/core": "~8.2.4",
     "@angular/forms": "~8.2.4",
+    "@angular/language-service": "~8.2.4",
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "ng-bootstrap": "^1.6.3",
     "popper": "^1.0.1",
     "rxjs": "^6.4.0",
     "rxjs-observable": "0.0.7",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "@angular/cli": "~8.3.3",
-    "@angular/compiler-cli": "~8.2.4",
-    "@angular-devkit/build-angular": "~0.803.3",
-    "@angular/language-service": "~8.2.4"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@types/node": "~8.9.4",
